Closed Bug 1663491 Opened 5 years ago Closed 5 years ago

Fix assert in SessionHistoryEntry::AddChild to deal with adding null

Categories

(Core :: DOM: Navigation, defect)

defect

Tracking

()

RESOLVED FIXED
82 Branch
Tracking Status
firefox82 --- fixed

People

(Reporter: peterv, Assigned: peterv)

References

Details

Attachments

(1 file)

No description provided.
Pushed by pvanderbeken@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/5e93b28e8b9e Fix assert in SessionHistoryEntry::AddChild to deal with adding null. r=smaug
Status: ASSIGNED → RESOLVED
Closed: 5 years ago
Resolution: --- → FIXED
Target Milestone: --- → 82 Branch
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: