Bug 1663491 - Fix assert in SessionHistoryEntry::AddChild to deal with adding null. r=smaug

Depends on D89422

Differential Revision: https://phabricator.services.mozilla.com/D89423